css/styles.css
/* ... */
svg.twitter:hover {fill: #000000;}
svg.linkedin:hover {fill: #0e76a8;}
svg.adobe:hover {fill: #ff3500;}
svg.cua:hover {fill: #1075BA;}

/* --------------------------- --------- --------------------------- */
/* ---------------------------- Tool tip --------------------------- */
/* --------------------------- --------- --------------------------- */

span i.material-icons {
  font-size: .66em;
}

[data-tooltip] {
  position: relative;
  z-index: 2;
  cursor: pointer;
}

/* Hide the tooltip content by default */
[data-tooltip]:before,
[data-tooltip]:after {
  visibility: hidden;
  opacity: 0;
  pointer-events: none;
}

/* Position tooltip above the element */
[data-tooltip]:before {
  position: absolute;
  bottom: 110%;
  left: 50%;
  margin-bottom: 5px;
  margin-left: -80px;
  padding: 7px;
  width: 32ch;
  background-color: #000;
  background-color: rgba(0,0,0,0.75);
  color: #fafafa;
  color: var(--white);
  content: attr(data-tooltip);
  text-align: center;
  font-size: .6em;
}

/* Triangle hack to make tooltip look like a speech bubble */
[data-tooltip]:after {
  position: absolute;
  bottom: 110%;
  left: 50%;
  margin-left: -5px;
  width: 0;
  border-top: 5px solid #000;
  border-top: 5px solid rgba(0,0,0,0.75);
  border-right: 5px solid transparent;
  border-left: 5px solid transparent;
  content: " ";
  font-size: 0;
  line-height: 0;
}

/* Show tooltip content on hover */
[data-tooltip]:hover:before,
[data-tooltip]:hover:after {
  visibility: visible;
  opacity: 1;
}

/* --------------------------- --------- --------------------------- */
/* ----------------------------- < 1600 ---------------------------- */
/* --------------------------- --------- --------------------------- */

@media only screen and (max-width: 1600px) {
  .panels {
    flex-direction: column;
    flex-flow: wrap;
    }
  .panel {
    flex: 1 1 50%;
    flex-wrap: nowrap;
  }
  .panel.open {flex: 0 0 50%;}
  /* .case_study {
    width: calc(80vw / 2);
  } */
  #case_studies {
    margin: 4vh auto;
    grid-template-columns: repeat(3, 1fr);
    width: 96vw;
  }
  #deliverables {gap: 24px;}
}

/* --------------------------- --------- --------------------------- */
/* ----------------------------- < 1200 ---------------------------- */
/* --------------------------- --------- --------------------------- */

@media only screen and (max-width: 1200px) {
  h1 {font-size: calc(2.4em + .25vw);}
  h2 {font-size: calc(1.75em + .75vw);}
  .flexQuad {margin: 0px 6vw 56px;}
  figure {margin: 16px;}
  /* .deliverable{flex: 0 0 33%;} */
  #deliverables {grid-template-columns: repeat(2, 1fr);}
  .hero figure img {max-height: 360px;}
  .cases figure img {
    max-width: 72vw;
    max-height: 400px;
  }
  .chartResponsive {width: 80vw; max-height: 360px;}
  figure.horizontal {max-height: 1000px;}
  figure.horizontal img {max-height: 1000px;}
  article p {font-size: calc(1em * .9);}
  .top_fab {
    height: 48px;
    width: 48px;
    top: 2em;
    left: 94vw;
  }
  .top_fab i.material-icons {font-size: 2.75em;}
  #case_studies {
    grid-template-columns: repeat(2, 1fr);
  }
}

/* --------------------------- --------- --------------------------- */
/* ----------------------------- < 990 ----------------------------- */
/* --------------------------- --------- --------------------------- */

@media only screen and (max-width: 990px) {
  nav h3 {font-size: calc(1em * 1);}
  section h1, section h2 {margin: 8px 0px;}
  section div p, section div ul {margin: 16px 7%;}
  section h4 {margin: 24px 7% 0px;}
  figure a h3 {font-size: calc(1em * 1.25);}
  /* .case_study {
    flex: 1 1 auto;
    width: calc(80vw / 1);
    padding: 16px;
  } */
  .deliverable{
    /* flex: 1 1 auto; */
    max-width: 92vw;
    margin: auto;
  }
  /* #case_studies {max-width: 100vw;} */
  .halfPad {padding: 48px 12%;}
  .halfPad_noTop {padding: 0px 12% 48px;}
  .quarterPad {padding: 48px 6%;}
  .eighthPad {padding: 48px 3%;}
  .noPad {padding: 48px 1%;}
  .flexQuad figure {flex: 0 0 100%;}
  .flexTrio figure {
    flex: 0 0 100%;
    flex-direction: column;
  }
  section {
    flex-wrap: nowrap;
    height: auto;
    padding: 48px 0;
  }
  .deliverable h3 {font-size: calc(1.5em + .25vw);}
  /* section article {flex-wrap:wrap;} */
  section .flexTrio {grid-template-columns: repeat(1, 1fr);}
  .cases figure img {max-width: 86vw;}
  figure.horizontal {max-height: 1200px;}
  figure.horizontal img {max-height: 1200px;}
  .reversed {height: auto;}
  .hero figure img {max-height: 320px;}
  .hero h3 {font-size: calc(1.125em + .25vw);}
  .top_fab {
    top: 2em;
    left: 90vw;
  }
  #testimonials {
  width: 98vw;
  padding: 2vh 0;
}
.testimonial {
  flex: 1 1 100%;
  max-width: 100%;
}
blockquote.testimonial {
  margin: 8px;
}
}
/* ... */

